Document phone local scaffold executor progress